--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2",
+    "elm-webpack-loader": "^3.0.6",
+    "elm-hot-loader": "^0.3.7"
+  },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.8",
     "copy-webpack-plugin": "^1.1.1",
