--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "elm-hot-loader-starter",
+  "name": "WRS",
   "private": true,
-  "version": "2.0.0",
+  "version": "3.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,12 +18,11 @@
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.8",
-    "copy-webpack-plugin": "^1.1.1",
-    "elm-webpack-loader": "^3.0.0",
-    "file-loader": "^0.8.5",
-    "style-loader": "^0.13.0",
-    "webpack": "^1.12.12",
-    "webpack-dev-server": "^1.14.1",
-    "elm-hot-loader": "^0.3.0"
+    "elm-webpack-loader": "^4.4.0",
+    "file-loader": "^1.1.5",
+    "style-loader": "^0.19.0",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.4",
+    "elm-hot-loader": "^0.5.4"
   }
 }
