--- a/package.json
+++ b/package.json
@@ -12,21 +12,17 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "elm-hot-loader": "0.3.7",
-    "elm-webpack-loader": "3.1.0",
-    "webpack": "1.13.3",
-    "webpack-dev-server": "1.16.2"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "clean-webpack-plugin": "0.1.8",
-    "elm": "0.18.0-exp5",
-    "elm-hot-loader": "0.5.4",
-    "elm-webpack-loader": "4.4.0",
-    "file-loader": "1.1.5",
-    "style-loader": "0.19.0",
-    "uglify-js": "3.3.23",
-    "webpack": "3.8.1",
-    "webpack-dev-server": "2.9.4"
+    "clean-webpack-plugin": "^0.1.8",
+    "elm": "^0.18.0",
+    "elm-hot-loader": "^0.3.7",
+    "elm-webpack-loader": "^3.1.0",
+    "file-loader": "^1.1.5",
+    "style-loader": "^0.19.0",
+    "uglify-js": "^3.3.23",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^3.1.11",
+    "uglifyjs": "^2.4.11"
   }
 }
