--- a/package.json
+++ b/package.json
@@ -16,15 +16,22 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^9.7.2",
     "clean-webpack-plugin": "^0.1.8",
+    "copy-webpack-plugin": "^5.0.5",
     "elm": "^0.18.0",
     "elm-hot-loader": "^0.3.7",
     "elm-webpack-loader": "^3.1.0",
-    "file-loader": "^1.1.5",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^4.3.0",
+    "html-webpack-plugin": "^3.2.0",
+    "loader-utils": "^1.2.3",
     "style-loader": "^0.19.0",
     "uglify-js": "^3.3.23",
-    "webpack": "^3.8.1",
-    "webpack-dev-server": "^3.1.11",
-    "uglifyjs": "^2.4.11"
+    "uglifyjs": "^2.4.11",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0",
+    "webpack-merge": "^4.2.2"
   }
 }
