--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "webpack-dev-server --hot --inline",
     "build": "yarn make && yarn uglify && cp -r css dist && cp docs/index.* dist && cp docs/config.js dist && cp -r docs/2018 dist",
     "make": "elm-make --yes src/Main.elm --output dist/wrs.js",
-    "uglify": "uglifyjs -mc 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9\" pure_getters=true keep_fargs=true' -o dist/wrs.js dist/wrs.js"
+    "uglify": "uglifyjs -mc 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9\" pure_getters=true keep_fargs=true' -o dist/wrs.js dist/wrs.js",
+    "test": "yarn elm-test"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "copy-webpack-plugin": "^5.0.5",
     "elm": "^0.18.0",
     "elm-hot-loader": "^0.3.7",
+    "elm-test": "0.18.13-beta4",
     "elm-webpack-loader": "^3.1.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.3.0",
