--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "yarn make && yarn uglify && cp -r css dist && cp docs/index.* dist && cp docs/config.js dist && cp -r docs/2018 dist",
     "make": "elm-make --yes src/Main.elm --output dist/wrs.js",
     "uglify": "uglifyjs -mc 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9\" pure_getters=true keep_fargs=true' -o dist/wrs.js dist/wrs.js",
-    "test": "yarn elm-test"
+    "test": "yarn elm-test",
+    "format": "yarn elm-format src"
   },
   "author": "",
   "license": "ISC",
