--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --hot --inline",
-    "build": "yarn make && yarn uglify && cp -r src/static dist && cp prod/index.* dist && cp prod/config.js dist && cp -r prod/2018 dist",
+    "build": "yarn make && yarn uglify && cp -r src/static dist && cp src/_redirects dist && cp prod/index.* dist && cp prod/config.js dist && cp -r prod/2018 dist",
     "make": "elm make src/Main.elm --output dist/wrs.js",
     "uglify": "uglifyjs -mc 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9\" pure_getters=true keep_fargs=true' -o dist/wrs.js dist/wrs.js",
     "test": "yarn elm-test",
