--- a/package.json
+++ b/package.json
@@ -6,29 +6,31 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --hot --inline",
-    "build": "yarn make && yarn uglify && cp -r css dist && cp prod/index.* dist && cp prod/config.js dist && cp -r prod/2018 dist",
-    "make": "elm-make --yes src/Main.elm --output dist/wrs.js",
+    "build": "yarn make && yarn uglify && cp -r src/static dist && cp src/_redirects dist && cp prod/index.* dist && cp prod/config.js dist && cp -r prod/2018 dist",
+    "make": "elm make src/Main.elm --output dist/wrs.js",
     "uglify": "uglifyjs -mc 'pure_funcs=\"F2,F3,F4,F5,F6,F7,F8,F9\" pure_getters=true keep_fargs=true' -o dist/wrs.js dist/wrs.js",
     "test": "yarn elm-test",
     "format": "yarn elm-format src"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {},
+  "dependencies": {
+    "css-loader": "^3.4.0"
+  },
   "devDependencies": {
     "autoprefixer": "^9.7.2",
     "clean-webpack-plugin": "^0.1.8",
     "copy-webpack-plugin": "^5.0.5",
-    "elm": "^0.18.0",
+    "elm": "^0.19.1-3",
     "elm-format": "^0.8.2",
     "elm-hot-loader": "^0.3.7",
-    "elm-test": "0.18.13-beta4",
-    "elm-webpack-loader": "^3.1.0",
+    "elm-test": "^0.19.1-revision2",
+    "elm-webpack-loader": "^6.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "loader-utils": "^1.2.3",
-    "style-loader": "^0.19.0",
+    "style-loader": "^1.0.2",
     "uglify-js": "^3.3.23",
     "uglifyjs": "^2.4.11",
     "webpack": "^4.41.2",
