--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "css-loader": "^3.4.0"
+    "css-loader": "^3.4.0",
+    "elm-analyse": "^0.16.5"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.2",
@@ -25,6 +26,7 @@
     "elm-format": "^0.8.2",
     "elm-hot-loader": "^0.3.7",
     "elm-test": "^0.19.1-revision2",
+    "elm-test-tests": "elm-explorations/test",
     "elm-webpack-loader": "^6.0.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^4.3.0",
