--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server --hot --inline",
+    "dev": "webpack-dev-server --hot",
     "build": "yarn make && yarn uglify && cp -r src/static dist && cp src/_redirects dist && cp prod/index.* dist && cp prod/config.js dist && cp -r prod/2018 dist && cp -r prod/2019 dist && cp -r prod/2020 dist && cp -r prod/2021 dist && cp -r prod/2022 dist && cp -r prod/2023 dist && cp -r prod/2024 dist",
     "make": "elm make src/Main.elm --optimize --output dist/wrs.js",
     "uglify": "uglifyjs dist/wrs.js --compress 'pure_funcs=[F2,F3,F4,F5,F6,F7,F8,F9,A2,A3,A4,A5,A6,A7,A8,A9],pure_getters,keep_fargs=false,unsafe_comps,unsafe' | uglifyjs --mangle --output dist/wrs.js",
@@ -15,29 +15,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "css-loader": "^3.4.0",
+    "css-loader": "^7.1.2",
     "elm-analyse": "^0.16.5"
   },
   "devDependencies": {
-    "autoprefixer": "^9.7.2",
-    "clean-webpack-plugin": "^0.1.8",
-    "copy-webpack-plugin": "^5.0.5",
-    "elm": "^0.19.1-3",
-    "elm-format": "^0.8.2",
-    "elm-hot-loader": "^0.3.7",
+    "autoprefixer": "^10.4.20",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^12.0.2",
+    "elm": "^0.19.1-6",
+    "elm-format": "^0.8.7",
+    "elm-hot-loader": "^0.5.4",
     "elm-test": "^0.19.1-revision2",
     "elm-test-tests": "elm-explorations/test",
-    "elm-webpack-loader": "^6.0.1",
+    "elm-webpack-loader": "^8.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^4.3.0",
-    "html-webpack-plugin": "^3.2.0",
-    "loader-utils": "^1.2.3",
-    "style-loader": "^1.0.2",
-    "uglify-js": "^3.3.23",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.3",
+    "loader-utils": "^3.3.1",
+    "style-loader": "^4.0.0",
+    "uglify-js": "^3.19.3",
     "uglifyjs": "^2.4.11",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1",
+    "webpack-dev-server": "^5.2.0",
     "webpack-merge": "^4.2.2"
   }
 }
